Rearranged files to fix folders

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Jane Smith's Profile</title>
+  <title>Joe Packi's Profile</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
@@ -10,34 +10,34 @@
 
     <div class="main-nav">
         <ul class="nav">
-          <li class="name">Jane Smith</li>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Experience</a></li>
+          <li class="name">Joe Packi</li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="experience.html">Experience</a></li>
         </ul>
     </div>
 
     <header>
-      <img src="images/me.png" alt="Drawing of Jane Smith" class="profile-image">
-      <h1 class="tag name">Hello, I’m Jane.</h1>
-      <p class="tag location">My home is Portland, Oregon.</p>
+      <img src="images/me.png" alt="Image of Joe Packi" class="profile-image">
+      <h1 class="tag name">Hello, I’m Joe.</h1>
+      <p class="tag location">My home is Laguna Hills, California.</p>
     </header>
 
     <main class="flex">
       <div class="card">
         <h2>Background</h2>
-        <p>I’m an aspiring web designer who loves everything about the web. I've lived in lots of different places and have worked in lots of different jobs. I’m excited to bring my life experience to the process of building fantastic looking websites.</p>
-        <p>I’ve been a professional cook and gardener and am a life-long learner who's always interested in expanding my skills.</p>
+        <p>I am learning to be a Web Designer.  I have spent most of my life working in the retail and service industry, and am looking to change that.</p>
+        <p>I have enjoyed many hobbies.  I am an expert water and snow skiier.  I love riding motorcycles as well as SeaDoo's.</p>
       </div> 
 
       <div class="card">
         <h2>Goals</h2>
-        <p>I want to master the process of building web sites and increase my knowledge, skills and abilities in:</p>
+        <p>I want to become a WORLD CLASS Web Designer mastering such skills as:</p>
         <ul class="skills">
           <li>HTML</li>
           <li>CSS</li>
           <li>JavaScript</li>
-          <li>Ruby</li>
-          <li>Rails</li>
+          <li>Python</li>
+          <li>Node.js</li>
         </ul>
         <p>I’d like to work for a web design firm helping clients create an impressive online presence.</p>
       </div> 
@@ -45,11 +45,11 @@
     </main>
     <footer>
       <ul>
-        <li><a href="#" class="social twitter">Twitter</a></li>
-        <li><a href="#" class="social linkedin">LinkedIn</a></li>
-        <li><a href="#" class="social github">Github</a></li>
+        <li><a href="https://twitter.com/joepacki" class="social twitter">Twitter</a></li>
+        <li><a href="https://www.linkedin.com/in/joepacki/" class="social linkedin">LinkedIn</a></li>
+        <li><a href="https://github.com/jpacki" class="social github">Github</a></li>
       </ul>
-      <p class="copyright">Copyright 2015, Jane Smith</p>
+      <p class="copyright">Copyright 2015, Joe Packi</p>
     </footer>
   </body>
   </html>
