--- a/experience.html
+++ b/experience.html
@@ -10,7 +10,7 @@
 </head>
 <body class="experience">
   <h1>Joe Packi's Work Experience</h1>
-  <hr color=black width="550px" align="left">
+  <hr align="left">
    <h2>Company: Assurant</h2>
    <h3>Dates: November 2021 - Present</h3>
    <h3>Position: Lead Phone Technician</h3>
@@ -21,7 +21,7 @@
       <li>Conduct performance management on staff.</li>
       <li>Repair cell phones quickly and correctly for customers daily.</li>
    </ul>
-   <hr color=black width="550px" align="left">
+   <hr align="left">
    <h2>Company: Asurion</h2>
    <h3>Dates: Sept 2011 - Oct 31, 2021</h3>
    <h3>Position: Lead Phone Technician</h3>
@@ -31,7 +31,7 @@
       <li>Repair phones efficintly and perfectly.</li>
       <li>Manage inventory, including receiving of parts, weekly cycle<br>counts and monthly complete part counts.</li>
     </ul>
-    <hr color=black width="550px" align="left">
+    <hr align="left">
    <h3><a href="index.html">HOME</a></h3>
 
 
