--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
 
     <header>
-      <img src="images/me.png" alt="Image of Joe Packi" class="profile-image">
+      <img src="images/new_profile_pic.png" alt="Image of Joe Packi" class="profile-image">
       <h1 class="tag name">Hello, I’m Joe.</h1>
       <p class="tag location">My home is Laguna Hills, California.</p>
     </header>
